--- a/assets/style.css
+++ b/assets/style.css
@@ -11,7 +11,7 @@
 }
 
 .hero-section {
-  background: url('assets/images/FondoPor.png') center/cover no-repeat;
+  background: url('../assets/images/FondoPor.png') center/cover no-repeat;
   min-height: 100vh;
   padding: 80px 0;
   color: var(--highlight-color);
@@ -101,7 +101,7 @@ body.dark-mode {
   display: flex;
   align-items: center;
   position: relative;
-  background: url('assets/images/FondoPor.png') center/cover no-repeat;
+  background: url('../assets/images/FondoPor.png') center/cover no-repeat;
 }
 
 #sobre-mi h3 {
@@ -198,6 +198,12 @@ body {
   box-shadow: 0 8px 20px rgba(0,0,0,0.1);
   transition: all 0.3s ease-in-out;
   background-color: #ffffff;
+}
+
+.proyecto-card:hover {
+  transform: scale(1.02);
+  transition: transform 0.3s ease-in-out;
+  box-shadow: 0 10px 20px rgba(255, 255, 255, 0.15);
 }
 
 .card:hover {
